# agent-howto

./: .env.example  .gitignore  README.md  pyproject.toml
hello-agent/: README.md
hello-agent/chapter1/: README.md
hello-agent/chapter1/first_agent/: README.md
hello-agent/chapter1/first_agent/first_agent/: __init__.py  __main__.py  agent.py  llm_client.py  main.py  parser.py  prompts.py
hello-agent/chapter1/first_agent/first_agent/tools/: __init__.py  attraction.py  weather.py
tests/: conftest.py  test_agent.py  test_parser.py
